--- a/src/app/board/task-details/task-details.component.scss
+++ b/src/app/board/task-details/task-details.component.scss
@@ -2,8 +2,8 @@
 
 .content-wrapper {
     height: 740px;
-    width: 450px;
-    
+    max-width: 450px;
+    min-width: 318px;
     background-color: var(--background-light);
     display: flex;
     flex-direction: column;
@@ -17,8 +17,14 @@
         @include word-break;
         text-overflow: ellipsis;
     }
+    .description {
+        @include word-break;
+    }
     @media(max-width: 550px) {
         width: 95%;
+        h1, .description {
+            width: 90%;
+        }
     }
 }
 
@@ -65,6 +71,8 @@
 
 .assigned-to-row,
 .subtask-row {
+    height: auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 24px
@@ -95,17 +103,29 @@
 
 .contact-list,
 .subtask-list {
+    width: 90%;
     height: auto;
     display: flex;
     flex-direction: column;
     gap: 8px; 
+    @include word-break;
 }
 
-.contact-item, .subtask-item {
+.contact-item {
     display: flex;
     align-items: center;
     gap: 16px; 
     @include word-break;
+}
+
+.subtask-item {
+    display: flex;
+    align-items: flex-start;
+    gap: 16px; 
+    @include word-break;
+    .checkbox {
+        margin: 4px;
+    }
 }
 
 .btn-close {
